tests/ui/coroutine/break-inside-coroutine-issue-124495.stderr
error[E0267]: `break` inside `async` function
  --> $DIR/break-inside-coroutine-issue-124495.rs:6:5
   |
LL | async fn async_fn() {
   | ------------------- enclosing `async` function
LL |     break;
   |     ^^^^^ cannot `break` inside `async` function

error[E0267]: `break` inside `gen` function
  --> $DIR/break-inside-coroutine-issue-124495.rs:10:5
   |
LL | gen fn gen_fn() {
   | --------------- enclosing `gen` function
LL |     break;
   |     ^^^^^ cannot `break` inside `gen` function

error[E0267]: `break` inside `async gen` function
  --> $DIR/break-inside-coroutine-issue-124495.rs:14:5
   |
LL | async gen fn async_gen_fn() {
   | --------------------------- enclosing `async gen` function
LL |     break;
   |     ^^^^^ cannot `break` inside `async gen` function

error[E0267]: `break` inside `async` block
  --> $DIR/break-inside-coroutine-issue-124495.rs:18:21
   |
LL |     let _ = async { break; };
   |             -----   ^^^^^ cannot `break` inside `async` block
   |             |
   |             enclosing `async` block

error[E0267]: `break` inside `async` closure
  --> $DIR/break-inside-coroutine-issue-124495.rs:20:24
   |
LL |     let _ = async || { break; };
   |             --------   ^^^^^ cannot `break` inside `async` closure
   |             |
   |             enclosing `async` closure

error[E0267]: `break` inside `gen` block
  --> $DIR/break-inside-coroutine-issue-124495.rs:22:19
   |
LL |     let _ = gen { break; };
   |             ---   ^^^^^ cannot `break` inside `gen` block
   |             |
   |             enclosing `gen` block

error[E0267]: `break` inside `async gen` block
  --> $DIR/break-inside-coroutine-issue-124495.rs:24:25
   |
LL |     let _ = async gen { break; };
   |             ---------   ^^^^^ cannot `break` inside `async gen` block
   |             |
   |             enclosing `async gen` block

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0267`.
